@@ -137,11 +137,13 @@ genders_la_SOURCES =      genders.c
 genders_la_LDFLAGS =      $(MODULE_FLAGS) $(GENDERS_LIBS)
 nodeattr_la_SOURCES =     nodeattr.c
 nodeattr_la_LDFLAGS =     $(MODULE_FLAGS)
+nodeattr_la_LIBADD =      $(top_builddir)/src/common/libcommon.la
 nodeupdown_la_SOURCES =   nodeupdown.c
 nodeupdown_la_LDFLAGS =   $(MODULE_FLAGS) $(NODEUPDOWN_LIBS)
 rms_la_SOURCES =          rms.c
 rms_la_LDFLAGS =          $(MODULE_FLAGS)
 sdr_la_SOURCES =          sdr.c
 sdr_la_LDFLAGS =          $(MODULE_FLAGS)
+sdr_la_LIBADD =           $(top_builddir)/src/common/libcommon.la
 slurm_la_SOURCES =        slurm.c
 slurm_la_LDFLAGS =        $(MODULE_FLAGS) $(SLURM_LIBS)
